Login, Session Management and Logout completed

--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -273,12 +273,14 @@ android:rotation="270"
             android:layout_width="368dp"
             android:layout_height="wrap_content" tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="4dp"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Logout"
             android:textAlignment="center"
             android:textColor="#fff"
+            android:id="@+id/logoutText"
 
             android:textSize="28sp" />
 
