--- a/app/src/main/res/layout/current_order.xml
+++ b/app/src/main/res/layout/current_order.xml
@@ -1,90 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?><!--TODO timeline to be added-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C0CCDA">
+    android:background="@color/myBackground">
 
 
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_margin="15dp"
-        card_view:cardCornerRadius="3dp"
-        card_view:cardElevation="6dp"
-        card_view:cardUseCompatPadding="true">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <android.support.v7.widget.RecyclerView android:id="@+id/recycler_current"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
-            <ListView
-                android:id="@+id/list_current_order"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/time"
-                android:divider="@null"
-                android:dividerHeight="0dp"
-
-                >
-
-            </ListView>
-
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/date"
-                android:layout_alignStart="@+id/date"
-                android:text="11:30"
-                android:textSize="15sp"
-
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/date"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"
-                android:text="Time Remaining"
-                android:textSize="15sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@id/time"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="15dp"
-                android:text="15 mins"
-                android:textColor="#000000"
-                android:textSize="20sp"
-                android:textStyle="bold"
-
-                />
-
-            <!--<android.support.v7.widget.RecyclerView android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@+id/time"-->
-            <!--android:layout_marginTop="25dp"-->
-            <!--android:id="@+id/recycler_current_order"-->
+        <!-- list of orders-->
 
 
-            <!--&gt;-->
+    </android.support.v7.widget.RecyclerView>
 
-            <!--&lt;!&ndash;list of food items&ndash;&gt;-->
-            <!--</android.support.v7.widget.RecyclerView>-->
 
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="2/1/2019"
-                android:textColor="#000000"
-                android:textSize="20sp" />
-
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
 </RelativeLayout>
