--- a/app/src/main/res/layout/current_order.xml
+++ b/app/src/main/res/layout/current_order.xml
@@ -4,7 +4,10 @@
     android:layout_height="match_parent"
     android:background="@color/myBackground">
 
-
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipeRefresh_curr"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView android:id="@+id/recycler_current"
         android:layout_width="match_parent"
@@ -16,5 +19,6 @@
 
     </android.support.v7.widget.RecyclerView>
 
+</android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
