--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -40,7 +40,7 @@
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:layout_alignParentEnd="true"
                       android:layout_alignTop="@id/date"
-                      android:text="Rs 120/-"
+                      android:text=""
                       android:layout_marginEnd="15dp"
                       android:textSize="25sp"
                       android:textStyle="bold"
