--- a/app/src/main/res/layout/previous_order.xml
+++ b/app/src/main/res/layout/previous_order.xml
@@ -5,6 +5,10 @@
                 android:background="@color/myBackground">
 
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh_prev"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView android:id="@+id/recycler_prev"
                                             android:layout_width="match_parent"
@@ -16,5 +20,6 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
