--- a/app/src/main/res/layout/food_listitem.xml
+++ b/app/src/main/res/layout/food_listitem.xml
@@ -28,7 +28,7 @@
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:layout_alignBottom="@+id/name_order"
-              android:text="60"
+              android:text=""
               android:textSize="20sp"
               android:layout_marginTop="5dp"
               android:layout_marginHorizontal="10dp"
